# patient-zero

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_test.yml  ci.yml
src/experiments/: playground.py
src/models/: __init__.py  ic.py  sir.py
src/patient_zero/: enums.py  models.py  networks.py  playground.py
src/patient_zero/experiments/: __init__.py  centrality.py  experiments.py  experiments_metadata.json  playground.ipynb  playground.py  plots.py  results.csv  simulations.py  simulations_metadata.json  utils.py
src/patient_zero/experiments/data/: balanced_tree_IC_cascade_10.json  balanced_tree_IC_cascade_100.json  balanced_tree_IC_cascade_20.json  balanced_tree_IC_cascade_50.json  balanced_tree_ModelType.IC_cascade_10.json  balanced_tree_ModelType.IC_cascade_100.json  balanced_tree_ModelType.IC_cascade_20.json  balanced_tree_ModelType.IC_cascade_50.json  balanced_tree_ModelType.SIR_cascade_10.json  barabasi_albert_IC_cascade_10.json  barabasi_albert_IC_cascade_100.json  barabasi_albert_IC_cascade_20.json  barabasi_albert_IC_cascade_50.json  (+22 more)
src/patient_zero/models/: ModelType.py  __init__.py  ic.py  sir.py
src/patient_zero/networks/: __init__.py  networks.py  utils.py
tests/: test_models.py  test_networks.py
tests/test_centrality/: test_rumor_centrality.py
tests/test_experiments/: test_experiments.py
tests/test_models/: test_ic.py  test_sir.py
tests/test_networks/: test_k_regular.py  test_random_graph.py  test_scale_free.py  test_small_world.py  test_tree.py  test_utils.py
(+83 files in other folders)
