[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patient-zero"
version = "0.1.0"
dependencies = ["networkx", "pandas"]

[project.optional-dependencies]
dev = ["pytest", "pylint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
python_files = "test_*.py"

[tool.pylint]
disable = ["C0114", "C0115", "C0116", "C0301", "C0303", "C0304", "C0305", "R0903", "R0801", "R0913", "R0917", "R0914"]
